--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-
-MONGO_URL = mongodb://localhost:27017/blogify
-
-PORT = 8000
+MONGO_URL=mongodb+srv://dixitt552:IBDuqzn969naTny0@cluster0.ggkpphk.mongodb.net/blogify?retryWrites=true&w=majority&appName=Cluster0
+PORT=8000
